--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "scripts": {
         "ng": "ng",
         "start": "node server.js",
-        "postinstall": "ng build --prod",
-        "build": "ng build",
+        "postinstall": "echo 'post install'",
+        "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
