--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "ng": "ng",
         "start": "node server.js",
         "postinstall": "echo 'post install'",
-        "build": "ng build --prod",
+        "build": "ng build --aot --prod",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
@@ -47,5 +47,9 @@
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
         "typescript": "~3.2.2"
+    },
+    "engines": {
+        "node": "10.15.3",
+        "npm": "6.4.1"
     }
 }
